--- a/Assignments/TSA_A1_Sp21.Rmd
+++ b/Assignments/TSA_A1_Sp21.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "ENV 790.30 - Time Series Analysis for Energy Data | Spring 2021"
 subtitle: "Assignment 1 - Due date 01/27/21"
-author: "Student Name"
+author: "Jeff Fromuth"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -19,12 +19,12 @@ When you have completed the assignment, **Knit** the text and code into a single
 
 Q1. What are your previous experiences with time series analysis, R, and Git? 
 
-> Answer: 
+> Answer: ENV 710 with Professor Albright was my first and only experience with R. In the last month of her class, Prof Albright gave us the option to do a tutorial in time series analysis and answer questions for an assignment. I did it, enjoyed it and decided to take this class. I have no experience with Git. 
 
 
 Q2. Provide a link below to your forked course repository in GitHub. Make sure you have pulled all recent changes from the course repository and that you have updated your course README file as instructed on the recorded video "Getting started with Git and Github". 
 
-> Answer: 
+> Answer: https://github.com/jkf28/ENV790_30_TSA_S2021
 
 
 Q3. For this part we just want to see the path to your R project. No need to do anything. The output will be automatically generated once you knit you file. 
